WCAG EM Export JSON
WIP ODS Export


Former-commit-id: 80160b71fe498ab4d651635481ad450bd719b024

--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -2949,6 +2949,7 @@ pdf.accessibility.portal                                       = {0}\n{1}
 pdf.accessibility.priority.incidence                           = Incidencias Por Prioridad
 pdf.accessibility.problem                                      = Problema
 pdf.accessibility.problems                                     = Problemas
+pdf.accessibility.sample.origin.other                          = Origen: [anchor1]
 pdf.accessibility.sample.p1                                    = Teniendo en cuenta la complejidad del sitio web, a continuaci\u00F3n se detalla la muestra de p\u00E1ginas incluidas en el presente an\u00E1lisis:
 pdf.accessibility.sample.p1.list                               = A continuaci\u00F3n se detalla el conjunto de p\u00E1ginas incluidas en el presente an\u00E1lisis.
 pdf.accessibility.sample.title                                 = Muestra de p\u00E1ginas
