JS Motor fix set cookie error
Cookie con Java Connection

Update itext 2.1.7 to 5.5.13.1 and refactor


Former-commit-id: a8dbb4688f96ebc49a7136e74d4b11416fc2ff6e

--- a/intavcore/profiles/desarrollo/intav.properties
+++ b/intavcore/profiles/desarrollo/intav.properties
@@ -27,7 +27,7 @@ check.confidence.level.problem = 3
 check.confidence.level.info = 4
 
 url.w3c.validator = http://validator.w3.org/check
-url.w3c.validator.human = http://validator.w3.org/check?uri={0}
+url.w3c.validator.human = http://validator.w3.org/check?uri={0}&doctype=HTML5
 url.w3c.validator.human.submit.code = http://validator.w3.org/#validate_by_input
 url.w3c.css.validator = http://jigsaw.w3.org/css-validator/validator?uri={0}&warning=no&lang={1}&output=soap12&profile=css3
 url.w3c.css.validator.human = http://jigsaw.w3.org/css-validator/validator?uri={0}&amp;lang={1}&amp;profile=css3
