--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -91,11 +91,19 @@
 			<artifactId>jfreechart</artifactId>
 			<version>1.0.17</version>
 		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>com.lowagie</groupId> -->
+<!-- 			<artifactId>itext</artifactId> -->
+<!-- 			<version>2.1.4</version> -->
+<!-- 		</dependency> -->
+
+		<!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
 		<dependency>
-			<groupId>com.lowagie</groupId>
-			<artifactId>itext</artifactId>
-			<version>2.1.4</version>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.13.1</version>
 		</dependency>
+
 
 		<!-- https://mvnrepository.com/artifact/org.jopendocument/jOpenDocument -->
 		<dependency>
