--- a/portal/profiles/desarrollo/crawler.properties
+++ b/portal/profiles/desarrollo/crawler.properties
@@ -94,6 +94,9 @@ export.open.office.template.common = ${deploy.path}/WEB-INF/templatesODT/Plantil
 export.open.office.template.common.category = ${deploy.path}/WEB-INF/templatesODT/Plantilla_Segmento.odt
 export.open.office.template.common.complexities = ${deploy.path}/WEB-INF/templatesODT/Plantilla_Complejidad.odt
 
+
+export.ods.template = ${deploy.path}/WEB-INF/templatesODT/Informe_Revision_Profunidad_v1.ods
+
 export.open.office = ${files.path}/exports/openOffice/
 
 conclusion.path = ${deploy.path}/WEB-INF/conclusion_xml/
