--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -2886,7 +2886,7 @@ pdf.accessibility.intro.next.basic.service.list.3.bold7         = 3 a\u00F1os y 
 pdf.accessibility.intro.next.basic.service.list.3.bold8         = cambios sustanciales
 pdf.accessibility.intro.next.basic.service.list.4               = En cualquier caso, esta revisi\u00F3n deber\u00EDa ser complementada para considerar {0} tanto de {1}. Como material de ayuda para complementar la evaluaci\u00F3n puede consultar la [anchor1] web disponible en el PAe, que entre otras cuestiones, contiene una relaci\u00F3n de herramientas gratuitas para apoyarse en la realizaci\u00F3n de ese proceso.
 pdf.accessibility.intro.next.basic.service.list.4.anchor1.text  = Gu\u00EDa de validaci\u00F3n de accesibilidad
-pdf.accessibility.intro.next.basic.service.list.4.anchor1.url   = https://eur-lex.europa.eu/legal-content/ES/TXT/?uri=uriserv:OJ.L_.2018.256.01.0108.01.SPA&toc=OJ:L:2018:256:FULL
+pdf.accessibility.intro.next.basic.service.list.4.anchor1.url   = https://administracionelectronica.gob.es/pae_Home/dam/jcr:bf784fe3-d673-4e44-8cd3-b818b6293280/Guia_de_Validacion_de_Accesibilidad_Web_v2_0.pdf
 pdf.accessibility.intro.next.basic.service.list.4.bold1         = todos los requisitos de accesibilidad de la UNE-EN 301 549:2019
 pdf.accessibility.intro.next.basic.service.list.4.bold2         = revisi\u00F3n autom\u00E1tica como manual
 pdf.accessibility.intro.next.basic.service.p1                   = Con el objetivo de ayudar al destinatario de este informe, a continuaci\u00F3n se indican los pasos a realizar tras recibir el informe:
@@ -2912,7 +2912,7 @@ pdf.accessibility.intro.next.list.3.bold7                       = 3 a\u00F1os y 
 pdf.accessibility.intro.next.list.3.bold8                       = cambios sustanciales
 pdf.accessibility.intro.next.list.4                             = Por tanto, si en base a lo comentado, el destinatario de este informe debiera realizar una revisi\u00F3n de accesibilidad (seg\u00FAn el art\u00EDculo 17 del RD) podr\u00EDa tomar como punto de partida la evaluaci\u00F3n realizada por el servicio de diagn\u00F3stico en l\u00EDnea del Observatorio. Pero siempre deber\u00E1 complementarla para el resto de requisitos, y adem\u00E1s, con las revisiones manuales que apliquen para los requisitos revisado autom\u00E1ticamente. Como material de ayuda para realizar la revisi\u00F3n de accesibilidad se puede consultar la [anchor1] web disponible en el PAe.
 pdf.accessibility.intro.next.list.4.anchor1.text                = Gu\u00EDa de validaci\u00F3n de accesibilidad
-pdf.accessibility.intro.next.list.4.anchor1.url                 = https://eur-lex.europa.eu/legal-content/ES/TXT/?uri=uriserv:OJ.L_.2018.256.01.0108.01.SPA&toc=OJ:L:2018:256:FULL
+pdf.accessibility.intro.next.list.4.anchor1.url                 = https://administracionelectronica.gob.es/pae_Home/dam/jcr:bf784fe3-d673-4e44-8cd3-b818b6293280/Guia_de_Validacion_de_Accesibilidad_Web_v2_0.pdf
 pdf.accessibility.intro.next.list.4.bold1                       = all the accessibility requirements of UNE-EN 301 549:2019
 pdf.accessibility.intro.next.list.4.bold2                       = revisi\u00F3n autom\u00E1tica como manual
 pdf.accessibility.intro.next.p1                                 = Con el objetivo de ayudar al destinatario de este informe, a continuaci\u00F3n se indican los pasos a realizar tras recibir el informe:
