--- a/intavcore/pom.xml
+++ b/intavcore/pom.xml
@@ -1,31 +1,25 @@
-<!--
-Copyright (C) 2017 MINHAFP, Ministerio de Hacienda y Función Pública, 
-This program is licensed and may be used, modified and redistributed under the terms
-of the European Public License (EUPL), either version 1.2 or (at your option) any later 
-version as soon as they are approved by the European Commission.
-Unless required by applicable law or agreed to in writing, software distributed under the 
-License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF 
-ANY KIND, either express or implied. See the License for the specific language governing 
-permissions and more details.
-You should have received a copy of the EUPL1.2 license along with this program; if not, 
-you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:32017D0863
--->
+<!-- Copyright (C) 2017 MINHAFP, Ministerio de Hacienda y Función Pública, This program is licensed and may be used, modified 
+	and redistributed under the terms of the European Public License (EUPL), either version 1.2 or (at your option) any later 
+	version as soon as they are approved by the European Commission. Unless required by applicable law or agreed to in writing, 
+	software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, 
+	either express or implied. See the License for the specific language governing permissions and more details. You should have 
+	received a copy of the EUPL1.2 license along with this program; if not, you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:32017D0863 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <artifactId>intav-core</artifactId>
-    <version>5.0.5</version>
-    <packaging>jar</packaging>
+	<artifactId>intav-core</artifactId>
+	<version>5.0.5</version>
+	<packaging>jar</packaging>
 
-    <name>intav-core</name>
+	<name>intav-core</name>
 
-    <parent>
-        <groupId>es.minhap.oaw</groupId>
-        <artifactId>oaw</artifactId>
-        <version>5.0.5</version>
-        <relativePath>../oaw/pom.xml</relativePath>
-    </parent>
+	<parent>
+		<groupId>es.minhap.oaw</groupId>
+		<artifactId>oaw</artifactId>
+		<version>5.0.5</version>
+		<relativePath>../oaw/pom.xml</relativePath>
+	</parent>
 
 	<properties>
 		<oaw.version>5.0.5</oaw.version>
@@ -150,15 +144,14 @@ you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:3201
 			<version>2.3</version>
 			<scope>provided</scope>
 		</dependency>
-		
-		
+
+
 		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
-<dependency>
-    <groupId>commons-io</groupId>
-    <artifactId>commons-io</artifactId>
-    <version>2.6</version>
-</dependency>
-		
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency>
 
 	</dependencies>
 
