--- a/portal/profiles/desarrollo/check.descriptions.properties
+++ b/portal/profiles/desarrollo/check.descriptions.properties
@@ -329,7 +329,7 @@ check.474.error     = Elementos <code>role=\u201Dlink\u201D</code> o <code>role=
 check.474.rationale = <p>Los elementos <code>role=\u201Dlink\u201D</code> o <code>role=\u201Dbutton\u201D</code> se emplean para identificar los grupos de controles de formulario relacionados entre s\u00ED. Sin embargo, tambi\u00E9n es necesario proporcionar una etiqueta que describa la naturaleza o funci\u00F3n de cada grupo mediante el atributo <code>aria-label</code> o <code>aria-labelledby</code>. Por tanto, todo elemento <code>role=\u201Dlink\u201D</code> o <code>role=\u201Dbutton\u201D</code> debe tener su correspondiente atributo <code>aria-label</code> o <code>aria-labelledby</code>.</p>
 check.475.error     = Elementos con atributos <code>aria-describedby</code> no referencia a elementos con <code>id</code> existentes en la p\u00E1gina y con contenido textual.
 check.475.rationale = <p>Todos los elementos no textuales deben disponer de una alternativa textual que transmita la misma informaci\u00F3n a los usuarios que no pueden ver el elemento, como los usuarios de lectores de pantalla o de navegadores de texto.</p>
-check.476.error     = Elementos con atributos <code>aria-label</code> o <code>aria-labeledby</code> coinciden o contiene la eqtiqueta visible del campo.
+check.476.error     = Elementos con atributos <code>aria-label</code> o <code>aria-labeledby</code> coinciden o contiene la etiqueta visible del campo.
 check.476.rationale = <p>--- DESCRIPCION PENDIENTE ---</p>
 check.477.error     = Uso de valores fijos de espaciado <code>line-height</code>, <code>letter-spacing</code> o <code>word-sapcing</code> mediante <code>!important</code>.
 check.477.rationale = <p>--- DESCRIPCION PENDIENTE ---</p>
