Global report export
Former-commit-id: 7bb30c398ebac198776d472cedb9670336a26b38

--- a/portal/src/main/resources/_.properties
+++ b/portal/src/main/resources/_.properties
@@ -820,6 +820,7 @@ indice.observatorio.eliminar.alt                   = Eliminar Observatorio
 indice.observatorio.etiquetas                      = Etiquetas
 indice.observatorio.generar.PDFs.alt               = Generar PDFs Primarios
 indice.observatorio.gestion.observatorio           = Gesti\u00F3n Observatorio
+indice.observatorio.informe.global                 = Informe global
 indice.observatorio.lista                          = Lista de Observatorios
 indice.observatorio.modificar.alt                  = Editar Observatorio
 indice.observatorio.nombre                         = Observatorio
@@ -3016,6 +3017,7 @@ report.config.etiquetas.filter.title               = Filtrar por etiquetas
 report.config.graficas.filter.info                 = Seleccione las gr\u00E1ficas opcionales a incluir en el obervatorio
 report.config.graficas.filter.title                = Gr\u00E1ficas opcionales a incluir\n
 report.config.observatorios.filter.title           = Observatorios para incluir en el evolutivo 
+report.config.observatorios.filter.title.global    = Observatorios para incluir en el informe 
 report.config.plantillas.filter.base               = Plantilla base
 report.config.plantillas.filter.complejidades      = Plantilla de la secci\u00F3n de complejidades
 report.config.plantillas.filter.complejidades.info = Para que esta plantilla funcione, la plantilla base seleccionada tiene que tener <strong>obligatoriamente un marcador llamado <em>complexitysection</em></strong> en la posici\u00F3n del doumento donnde se quiera a\u00F1adir esta secci\u00F3n. En caso contrario <u>no podr\u00E1 ser insertado en el documento base</u>. \n<br/><a  title="Insertar un marcador en LibreOffice" href="https://help.libreoffice.org/Writer/Insert_Bookmark/es" target="_blank">Insertar un marcador en LibreOffice</span></a>
