PDF fix after change library
Messages


Former-commit-id: 7283e5363f82561ca70ba4a21e238e07adb0827d

--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -764,8 +764,8 @@ img.delete.term    = Eliminar t\u00E9rmino
 img.edit.term      = Editar t\u00E9rmino
 
 importar.semillas.info  = Se ha procesado correctamente el fichero. A continuci\u00F3n se muestran los cambios que se van a realizar con los datos cargados del fichero.
-importar.semillas.info2 = \u00BFDesea continuar con la importaci\u00F3nn? Se proceder\u00E1 a la modificaci\u00F3n/creaci\u00F3n de las semillas indicas. Esta acci\u00F3nn <strong>no se puede deshacer</strong>
-importar.semillas.title = Importaci\u00F3nn masiva de semillas
+importar.semillas.info2 = \u00BFDesea continuar con la importaci\u00F3nn? Se proceder\u00E1 a la modificaci\u00F3n/creaci\u00F3n de las semillas indicas. Esta acci\u00F3n <strong>no se puede deshacer</strong>
+importar.semillas.title = Importaci\u00F3n masiva de semillas
 
 indice.cartuchos.accion.borrar                     = Eliminar Cartucho
 indice.cartuchos.accion.desinstalar                = Desinstalar Cartucho
@@ -820,6 +820,7 @@ indice.observatorio.eliminar.alt                   = Eliminar Observatorio
 indice.observatorio.etiquetas                      = Etiquetas
 indice.observatorio.generar.PDFs.alt               = Generar PDFs Primarios
 indice.observatorio.gestion.observatorio           = Gesti\u00F3n Observatorio
+indice.observatorio.informe.global                 = Informe global
 indice.observatorio.lista                          = Lista de Observatorios
 indice.observatorio.modificar.alt                  = Editar Observatorio
 indice.observatorio.nombre                         = Observatorio
@@ -3053,6 +3054,7 @@ report.config.etiquetas.filter.title               = Filtrar por etiquetas
 report.config.graficas.filter.info                 = Seleccione las gr\u00E1ficas opcionales a incluir en el obervatorio
 report.config.graficas.filter.title                = Gr\u00E1ficas opcionales a incluir\n
 report.config.observatorios.filter.title           = Observatorios para incluir en el evolutivo 
+report.config.observatorios.filter.title.global    = Observatorios para incluir en el informe 
 report.config.optional.1                           = Resultados globales. Modalidad de verificaci\u00F3n
 report.config.optional.2                           = Resultados globales. Puntuaci\u00F3n media por aspectos
 report.config.optional.3                           = Resultados por segmento. Puntuaci\u00F3n media de las verificaciones
