--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -766,8 +766,8 @@ img.delete.term    = Eliminar t\u00E9rmino
 img.edit.term      = Editar t\u00E9rmino
 
 importar.semillas.info  = Se ha procesado correctamente el fichero. A continuci\u00F3n se muestran los cambios que se van a realizar con los datos cargados del fichero.
-importar.semillas.info2 = \u00BFDesea continuar con la importaci\u00F3nn? Se proceder\u00E1 a la modificaci\u00F3n/creaci\u00F3n de las semillas indicas. Esta acci\u00F3nn <strong>no se puede deshacer</strong> 
-importar.semillas.title = Importaci\u00F3nn masiva de semillas
+importar.semillas.info2 = \u00BFDesea continuar con la importaci\u00F3nn? Se proceder\u00E1 a la modificaci\u00F3n/creaci\u00F3n de las semillas indicas. Esta acci\u00F3n <strong>no se puede deshacer</strong> 
+importar.semillas.title = Importaci\u00F3n masiva de semillas
 
 indice.cartuchos.accion.borrar                     = Eliminar Cartucho
 indice.cartuchos.accion.desinstalar                = Desinstalar Cartucho
@@ -3974,7 +3974,9 @@ welcome.action.message.generate.seeds      = Generar semillas (archivos de URLs)
 welcome.action.message.see.crawlings       = Ver los resultados de los rastreos y exportarlos a diversos formatos
 welcome.common.message                     = Esta es la aplicaci\u00F3n Rastreador Web de MINHAP. Las acciones que, con su perfil, podr\u00E1 llevar a cabo son:
 
-xml.import.error   = Error al importar las semillas 
-xml.import.success = Semillas importadas correctamente
-xml.seed.not.valid = El fichero no contiene elementos v\u00E1lidos
-xml.size.error     = Fichero demasiado grande.
+xml.import.error               = Error al importar las semillas 
+xml.import.success             = Semillas importadas correctamente
+xml.import.success.all.errors  = No se ha incorporado ninguna semilla
+xml.import.success.with.errors = Semillas importadas correctamente. Alguna no se ha incorporado porque la semilla ya exist\u00EDa
+xml.seed.not.valid             = El fichero no contiene elementos v\u00E1lidos
+xml.size.error                 = Fichero demasiado grande.
