--- a/portal/src/main/resources/ApplicationResources-2012-b.properties
+++ b/portal/src/main/resources/ApplicationResources-2012-b.properties
@@ -668,8 +668,8 @@ img.delete.term    = Eliminar t\u00E9rmino
 img.edit.term      = Editar t\u00E9rmino
 
 importar.semillas.info  = Se ha procesado correctamente el fichero. A continuci\u00F3n se muestran los cambios que se van a realizar con los datos cargados del fichero.
-importar.semillas.info2 = \u00BFDesea continuar con la importaci\u00F3nn? Se proceder\u00E1 a la modificaci\u00F3n/creaci\u00F3n de las semillas indicas. Esta acci\u00F3nn <strong>no se puede deshacer</strong>
-importar.semillas.title = Importaci\u00F3nn masiva de semillas
+importar.semillas.info2 = \u00BFDesea continuar con la importaci\u00F3nn? Se proceder\u00E1 a la modificaci\u00F3n/creaci\u00F3n de las semillas indicas. Esta acci\u00F3n <strong>no se puede deshacer</strong>
+importar.semillas.title = Importaci\u00F3n masiva de semillas
 
 indice.cartuchos.accion.borrar                     = Eliminar Cartucho
 indice.cartuchos.accion.desinstalar                = Desinstalar Cartucho
