--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -74,6 +74,14 @@
 
 	</build>
 
+        <repositories>
+            <repository>
+              <id>repository.jboss.org-public</id>
+              <name>JBoss.org Maven repository</name>
+              <url>https://repository.jboss.org/nexus/content/groups/public</url>
+            </repository>
+        </repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>es.minhap.oaw</groupId>
