Record count at the end of seed and tags grids
Former-commit-id: ac19ff4f6dffd7fc4985161353cbe3bb30526ad5

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -274,6 +274,7 @@ cargar.semilla.nuevas.title                  = Nuevas
 cargar.semilla.observatorio.acronimo         = Acr\u00F3nimo
 cargar.semilla.observatorio.activa           = Activa
 cargar.semilla.observatorio.ambito           = \u00C1mbito
+cargar.semilla.observatorio.buscar.total     = N\u00FAmero de resultados: 
 cargar.semilla.observatorio.categoria        = Nombre
 cargar.semilla.observatorio.clave            = Agrupado por
 cargar.semilla.observatorio.complejidad      = Complejidad
