--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -12,6 +12,7 @@
 # you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:32017D0863
 #-------------------------------------------------------------------------------
 
+
 0 = 0
 
 0.0 = 0.0
@@ -367,6 +368,7 @@ colname.classification     = Clasificaci\u00F3n
 colname.complex            = Complejidad
 colname.dependecies        = Dependencias
 colname.depth              = Profundidad
+colname.depthReport        = Informe en profundidad
 colname.directory          = Directorio
 colname.download           = Descargar
 colname.email              = Email
@@ -1344,6 +1346,7 @@ minhap.observatory.2_0.subgroup.2.1.7 = 2.1.7 Compatibilidad
 minhap.observatory.2_0.subgroup.2.2.1 = 2.2.1 M\u00FAltiples v\u00EDas de navegaci\u00F3n
 minhap.observatory.2_0.subgroup.2.2.2 = 2.2.2 Foco del teclado
 minhap.observatory.2_0.subgroup.2.2.3 = 2.2.3 Navegaci\u00F3n consistente
+# PAUTAS OBSERVATORIO UNE 2012 -B
 minhap.observatory.3_0.subgroup.1.1   = 1.1 Existencia de alternativas textuales
 minhap.observatory.3_0.subgroup.1.10  = 1.10 Formularios
 minhap.observatory.3_0.subgroup.1.11  = 1.11 T\u00EDtulo de p\u00E1gina y de marcos
@@ -1364,7 +1367,7 @@ minhap.observatory.3_0.subgroup.2.3   = 2.3 Secci\u00F3n de accesibilidad
 minhap.observatory.3_0.subgroup.2.4   = 2.4 M\u00FAltiples v\u00EDas de navegaci\u00F3n
 minhap.observatory.3_0.subgroup.2.5   = 2.5 Foco del teclado
 minhap.observatory.3_0.subgroup.2.6   = 2.6 Navegaci\u00F3n consistente
-# PAUTAS OBSERVATORIO UNE 2012
+# PAUTAS OBSERVATORIO ACC
 minhap.observatory.5_0.subgroup.1.1   = 1.1 Existencia de alternativas textuales
 minhap.observatory.5_0.subgroup.1.10  = 1.10 Formularios y estructura
 minhap.observatory.5_0.subgroup.1.11  = 1.11 T\u00EDtulo de p\u00E1gina y de marcos
