--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -3078,7 +3078,7 @@ report.config.title.label                           = T\u00EDtulo del documento 
 report.config.title.title                           = T\u00EDtulo del informe
 report.evolution.allocation.graphic.title.fixed     = Evoluci\u00F3n del Nivel de adecuaci\u00F3n estimado: parte fija
 report.evolution.allocation.graphic.title.global    = Evoluci\u00F3n del Nivel de adecuaci\u00F3n estimado: en t\u00E9rminos generales
-report.evolution.compliance.graphic.title.fixed     = Evoluci\u00F3n de la Situaci\u00F3n de cumplimento estimado: parte fija
+report.evolution.compliance.graphic.title.fixed     = Evoluci\u00F3n de la Situaci\u00F3n de cumplimiento estimada: parte fija
 report.evolution.compliance.graphic.title.global    = Evoluci\u00F3n de la Situaci\u00F3n de cumplimiento estimada: en t\u00E9rminos generales
 report.evolution.conformance.verification.a.fixed   = Evoluci\u00F3n de la conformidad de las verificaciones: parte fija. Nivel de adecuaci\u00F3n A
 report.evolution.conformance.verification.a.global  = Evoluci\u00F3n de la conformidad de las verificaciones: en t\u00E9rminos generales. Nivel de adecuaci\u00F3n A
