Evoluvtion segment section template
Former-commit-id: 1b8cb7b384a52c91b13c8e4de303dbf0eb48a4af

--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -2612,6 +2612,8 @@ observatory.graphic.accessibility.level.allocation.title                      = 
 observatory.graphic.accessibility.level.compilance.segment.name               = DistribucionNivelCumplimientoS{0}
 observatory.graphic.accessibility.level.compilance.segment.title              = Situaci\u00F3n de cumplimiento estimada: segmento {0}
 observatory.graphic.accessibility.level.compliance.complex.title              = Situaci\u00F3n de cumplimiento estimada: complejidad {0}
+observatory.graphic.accessibility.level.evol.allocation.segment.name          = EvolDistribucionNivelAccesibilidadS{0}
+observatory.graphic.accessibility.level.evol.compilance.segment.name          = EvolDistribucionNivelCumplimientoS{0}
 observatory.graphic.aspect.mid.name                                           = ComparacionMediasAspectos
 observatory.graphic.aspect.mid.title                                          = Puntuaci\u00F3n media por aspecto
 observatory.graphic.aspects                                                   = Aspectos
@@ -3051,44 +3053,50 @@ rastreo.realizado.busqueda.semilla      = Semilla
 
 remove = Eliminar
 
-report.config.etiquetas.filter.info                 = El filtrado de etiquetas se aplica como una consulta inclusiva. <br/>Por ejemplo, si se indican las etiquetas <em>ETIQUETA_1</em> y <em>ETIQUETA_2</em> se seleccionar\u00E1n los resultados de las semillas que tengan asociada la ETIQUETA_1 <mark>o</mark> la ETIQUETA_2 (o ambas)
-report.config.etiquetas.filter.title                = Filtrar por etiquetas
-report.config.graficas.filter.info                  = Seleccione las gr\u00E1ficas opcionales a incluir en el obervatorio
-report.config.graficas.filter.title                 = Gr\u00E1ficas opcionales a incluir\n
-report.config.observatorios.filter.title            = Observatorios para incluir en el evolutivo 
-report.config.observatorios.filter.title.global     = Observatorios para incluir en el informe 
-report.config.optional.1                            = Resultados globales. Modalidad de verificaci\u00F3n
-report.config.optional.2                            = Resultados globales. Puntuaci\u00F3n media por aspectos
-report.config.optional.3                            = Resultados por segmento. Puntuaci\u00F3n media de las verificaciones
-report.config.optional.4                            = Resultados por segmento. Modalidad de verificaci\u00F3n
-report.config.optional.5                            = Resultados por segmento. Puntuaci\u00F3n media por aspectos
-report.config.optional.6                            = Evoluci\u00F3n en T\u00E9rminos generales y en Parte fija. Puntuaci\u00F3n media por aspectos
-report.config.optional.7                            = Evoluci\u00F3n por segmentos. Conformidad por verificaci\u00F3n
-report.config.plantillas.filter.base                = Plantilla base
-report.config.plantillas.filter.complejidades       = Plantilla de la secci\u00F3n de complejidades
-report.config.plantillas.filter.complejidades.info  = Para que esta plantilla funcione, la plantilla base seleccionada tiene que tener <strong>obligatoriamente un marcador llamado <em>complexitysection</em></strong> en la posici\u00F3n del doumento donnde se quiera a\u00F1adir esta secci\u00F3n. En caso contrario <u>no podr\u00E1 ser insertado en el documento base</u>. \n<br/><a  title="Insertar un marcador en LibreOffice" href="https://help.libreoffice.org/Writer/Insert_Bookmark/es" target="_blank">Insertar un marcador en LibreOffice</span></a>
-report.config.plantillas.filter.segmentos           = Plantilla de la secci\u00F3n de segmentos
-report.config.plantillas.filter.segmentos.info      = Para que esta plantilla funcione, la plantilla base seleccionada tiene que tener <strong>obligatoriamente un marcador llamado <em>categorysection</em></strong> en la posici\u00F3n del doumento donnde se quiera a\u00F1adir esta secci\u00F3n. En caso contrario <u>no podr\u00E1 ser insertado en el documento base</u>. <br/><a  title="Insertar un marcador en LibreOffice" href="https://help.libreoffice.org/Writer/Insert_Bookmark/es" target="_blank">Insertar un marcador en LibreOffice</span></a>
-report.config.plantillas.filter.title               = Plantillas a usar para generar el informe
-report.config.tags.title                            = Etiquetas
-report.config.title                                 = Configurar informe agregado
-report.config.title.default                         = Informe de observatorio de accesibilidad web
-report.config.title.label                           = T\u00EDtulo del documento generado
-report.config.title.title                           = T\u00EDtulo del informe
-report.evolution.allocation.graphic.title.fixed     = Evoluci\u00F3n del Nivel de adecuaci\u00F3n estimado: parte fija
-report.evolution.allocation.graphic.title.global    = Evoluci\u00F3n del Nivel de adecuaci\u00F3n estimado: en t\u00E9rminos generales
-report.evolution.compliance.graphic.title.fixed     = Evoluci\u00F3n de la Situaci\u00F3n de cumplimento estimado: parte fija
-report.evolution.compliance.graphic.title.global    = Evoluci\u00F3n de la Situaci\u00F3n de cumplimiento estimada: en t\u00E9rminos generales
-report.evolution.conformance.verification.a.fixed   = Evoluci\u00F3n de la conformidad de las verificaciones: parte fija. Nivel de adecuaci\u00F3n A
-report.evolution.conformance.verification.a.global  = Evoluci\u00F3n de la conformidad de las verificaciones: en t\u00E9rminos generales. Nivel de adecuaci\u00F3n A
-report.evolution.conformance.verification.aa.fixed  = Evoluci\u00F3n de la conformidad de las verificaciones: parte fija. Nivel de adecuaci\u00F3n AA
-report.evolution.conformance.verification.aa.global = Evoluci\u00F3n de la conformidad de las verificaciones: en t\u00E9rminos generales. Nivel de adecuaci\u00F3n AA
-report.evolution.score.aspect.fixed                 = Evoluci\u00F3n de la Puntuaci\u00F3n media por aspectos: parte fija
-report.evolution.score.aspect.global                = Evoluci\u00F3n de la Puntuaci\u00F3n media por aspectos: en t\u00E9rminos generales
-report.evolution.score.verifications.a.fixed        = Evoluci\u00F3n de la Puntuaci\u00F3n media de las verificaciones: parte fija. Nivel de adecuaci\u00F3n A
-report.evolution.score.verifications.a.global       = Evoluci\u00F3n de la Puntuaci\u00F3n media de las verificaciones: en t\u00E9rminos generales. Nivel de adecuaci\u00F3n A
-report.evolution.score.verifications.aa.fixed       = Evoluci\u00F3n de la Puntuaci\u00F3n media de las verificaciones: parte fija. Nivel de adecuaci\u00F3n AA
-report.evolution.score.verifications.aa.global      = Evoluci\u00F3n de la Puntuaci\u00F3n media de las verificaciones: en t\u00E9rminos generales. Nivel de adecuaci\u00F3n AA
+report.config.etiquetas.filter.info                  = El filtrado de etiquetas se aplica como una consulta inclusiva. <br/>Por ejemplo, si se indican las etiquetas <em>ETIQUETA_1</em> y <em>ETIQUETA_2</em> se seleccionar\u00E1n los resultados de las semillas que tengan asociada la ETIQUETA_1 <mark>o</mark> la ETIQUETA_2 (o ambas)
+report.config.etiquetas.filter.title                 = Filtrar por etiquetas
+report.config.graficas.filter.info                   = Seleccione las gr\u00E1ficas opcionales a incluir en el obervatorio
+report.config.graficas.filter.title                  = Gr\u00E1ficas opcionales a incluir\n
+report.config.observatorios.filter.title             = Observatorios para incluir en el evolutivo 
+report.config.observatorios.filter.title.global      = Observatorios para incluir en el informe 
+report.config.optional.1                             = Resultados globales. Modalidad de verificaci\u00F3n
+report.config.optional.2                             = Resultados globales. Puntuaci\u00F3n media por aspectos
+report.config.optional.3                             = Resultados por segmento. Puntuaci\u00F3n media de las verificaciones
+report.config.optional.4                             = Resultados por segmento. Modalidad de verificaci\u00F3n
+report.config.optional.5                             = Resultados por segmento. Puntuaci\u00F3n media por aspectos
+report.config.optional.6                             = Evoluci\u00F3n en T\u00E9rminos generales y en Parte fija. Puntuaci\u00F3n media por aspectos
+report.config.optional.7                             = Evoluci\u00F3n por segmentos. Conformidad por verificaci\u00F3n
+report.config.plantillas.filter.base                 = Plantilla base
+report.config.plantillas.filter.complejidades        = Plantilla de la secci\u00F3n de complejidades
+report.config.plantillas.filter.complejidades.info   = Para que esta plantilla funcione, la plantilla base seleccionada tiene que tener <strong>obligatoriamente un marcador llamado <em>complexitysection</em></strong> en la posici\u00F3n del doumento donnde se quiera a\u00F1adir esta secci\u00F3n. En caso contrario <u>no podr\u00E1 ser insertado en el documento base</u>. \n<br/><a  title="Insertar un marcador en LibreOffice" href="https://help.libreoffice.org/Writer/Insert_Bookmark/es" target="_blank">Insertar un marcador en LibreOffice</span></a>
+report.config.plantillas.filter.evol.segmentos       = Plantilla de la secci\u00F3n de evoluci\u00F3n por segmentos
+report.config.plantillas.filter.evol.segmentos.info  = Para que esta plantilla funcione, la plantilla base seleccionada tiene que tener <strong>obligatoriamente un marcador llamado <em>segmentevolutionsection</em></strong> en la posici\u00F3n del doumento donnde se quiera a\u00F1adir esta secci\u00F3n. En caso contrario <u>no podr\u00E1 ser insertado en el documento base</u>. \n<br/><a  title="Insertar un marcador en LibreOffice" href="https://help.libreoffice.org/Writer/Insert_Bookmark/es" target="_blank">Insertar un marcador en LibreOffice</span></a>
+report.config.plantillas.filter.segmentos            = Plantilla de la secci\u00F3n de segmentos
+report.config.plantillas.filter.segmentos.info       = Para que esta plantilla funcione, la plantilla base seleccionada tiene que tener <strong>obligatoriamente un marcador llamado <em>categorysection</em></strong> en la posici\u00F3n del doumento donnde se quiera a\u00F1adir esta secci\u00F3n. En caso contrario <u>no podr\u00E1 ser insertado en el documento base</u>. <br/><a  title="Insertar un marcador en LibreOffice" href="https://help.libreoffice.org/Writer/Insert_Bookmark/es" target="_blank">Insertar un marcador en LibreOffice</span></a>
+report.config.plantillas.filter.title                = Plantillas a usar para generar el informe
+report.config.tags.title                             = Etiquetas
+report.config.title                                  = Configurar informe agregado
+report.config.title.default                          = Informe de observatorio de accesibilidad web
+report.config.title.label                            = T\u00EDtulo del documento generado
+report.config.title.title                            = T\u00EDtulo del informe
+report.evolution.allocation.graphic.title.fixed      = Evoluci\u00F3n del Nivel de adecuaci\u00F3n estimado: parte fija
+report.evolution.allocation.graphic.title.global     = Evoluci\u00F3n del Nivel de adecuaci\u00F3n estimado: en t\u00E9rminos generales
+report.evolution.allocation.graphic.title.segment    = Evoluci\u00F3n del Nivel de adecuaci\u00F3n estimado: segmento {0}
+report.evolution.compliance.graphic.title.fixed      = Evoluci\u00F3n de la Situaci\u00F3n de cumplimiento estimada: parte fija
+report.evolution.compliance.graphic.title.global     = Evoluci\u00F3n de la Situaci\u00F3n de cumplimiento estimada: en t\u00E9rminos generales
+report.evolution.compliance.graphic.title.segment    = Evoluci\u00F3n de la Situaci\u00F3n de cumplimiento estimada: segmento {0}
+report.evolution.conformance.verification.a.fixed    = Evoluci\u00F3n de la conformidad de las verificaciones: parte fija. Nivel de adecuaci\u00F3n A
+report.evolution.conformance.verification.a.global   = Evoluci\u00F3n de la conformidad de las verificaciones: en t\u00E9rminos generales. Nivel de adecuaci\u00F3n A
+report.evolution.conformance.verification.a.segment  = Evoluci\u00F3n de la conformidad de las verificaciones: segmento {0}. Nivel de adecuaci\u00F3n A
+report.evolution.conformance.verification.aa.fixed   = Evoluci\u00F3n de la conformidad de las verificaciones: parte fija. Nivel de adecuaci\u00F3n AA
+report.evolution.conformance.verification.aa.global  = Evoluci\u00F3n de la conformidad de las verificaciones: en t\u00E9rminos generales. Nivel de adecuaci\u00F3n AA
+report.evolution.conformance.verification.aa.segment = Evoluci\u00F3n de la conformidad de las verificaciones: segmento {0}. Nivel de adecuaci\u00F3n AA
+report.evolution.score.aspect.fixed                  = Evoluci\u00F3n de la Puntuaci\u00F3n media por aspectos: parte fija
+report.evolution.score.aspect.global                 = Evoluci\u00F3n de la Puntuaci\u00F3n media por aspectos: en t\u00E9rminos generales
+report.evolution.score.verifications.a.fixed         = Evoluci\u00F3n de la Puntuaci\u00F3n media de las verificaciones: parte fija. Nivel de adecuaci\u00F3n A
+report.evolution.score.verifications.a.global        = Evoluci\u00F3n de la Puntuaci\u00F3n media de las verificaciones: en t\u00E9rminos generales. Nivel de adecuaci\u00F3n A
+report.evolution.score.verifications.aa.fixed        = Evoluci\u00F3n de la Puntuaci\u00F3n media de las verificaciones: parte fija. Nivel de adecuaci\u00F3n AA
+report.evolution.score.verifications.aa.global       = Evoluci\u00F3n de la Puntuaci\u00F3n media de las verificaciones: en t\u00E9rminos generales. Nivel de adecuaci\u00F3n AA
 
 resultado.observatorio.activo.alt                                = Activo
 resultado.observatorio.detalle.semilla.rastreo.title             = Detalle de Semilla
