Global report new sections
Former-commit-id: 71b279878f8af5fa4892f13dfd00da6be97a43d5

--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -2640,6 +2640,10 @@ observatory.graphic.evolution.mid.puntuation.title.fixed                      = 
 observatory.graphic.evolution.mid.puntuation.title.general                    = Evoluci\u00F3n de la Puntuaci\u00F3n media del observatorio: en t\u00E9rminos generales
 observatory.graphic.evolution.verification.mid.puntuation                     = Evoluci\u00F3n de la Puntuaci\u00F3n Media por Verificaci\u00F3n. Verificaci\u00F3n {0}
 observatory.graphic.evolution.verification.mid.puntuation.name                = EvolucionPuntuacionMediaVerificacionV{0}
+observatory.graphic.global.puntuation.allocation.ambit.mark.name              = ComparacionAdecuacionAmbito
+observatory.graphic.global.puntuation.allocation.ambit.mark.title             = Nivel de adecuaci\u00F3n estimado por \u00E1mbito
+observatory.graphic.global.puntuation.allocation.ambit.primary.mark.name      = ComparacionAdecuacionAmbitoPrincipales
+observatory.graphic.global.puntuation.allocation.ambit.primary.mark.title     = Nivel de adecuaci\u00F3n estimado de los sitios web principales por \u00E1mbito
 observatory.graphic.global.puntuation.allocation.complexitiviy.strached.name  = ComparacionPuntuacionComplejidad
 observatory.graphic.global.puntuation.allocation.complexitiviy.strached.title = Puntuaci\u00F3n media de los sitios web por complejidad y nivel de adecuaci\u00F3n
 observatory.graphic.global.puntuation.allocation.complexity.mark.name         = ComparacionAdecuacionComplejidad
@@ -2648,10 +2652,14 @@ observatory.graphic.global.puntuation.allocation.segment.strached.name        = 
 observatory.graphic.global.puntuation.allocation.segment.strached.title       = Puntuaci\u00F3n media de los sitios web por segmento y nivel de adecuaci\u00F3n estimado
 observatory.graphic.global.puntuation.allocation.segments.mark.name           = ComparacionAdecuacionSegmento
 observatory.graphic.global.puntuation.allocation.segments.mark.title          = Nivel de adecuaci\u00F3n estimado por segmento
+observatory.graphic.global.puntuation.compilance.ambit.mark.name              = ComparacionCumplimientoAmbitoPrincipales
+observatory.graphic.global.puntuation.compilance.ambit.primary.mark.name      = ComparacionCumplimientoAmbito
 observatory.graphic.global.puntuation.compilance.complexitiviy.mark.name      = ComparacionCumpliminetoComplejidad
 observatory.graphic.global.puntuation.compilance.complexitiviy.mark.title     = Situaci\u00F3n de cumplimiento estimada por complejidad
 observatory.graphic.global.puntuation.compilance.segments.mark.name           = ComparacionCumpliminetoSegmento
 observatory.graphic.global.puntuation.compilance.segments.mark.title          = Situaci\u00F3n de cumplimiento estimada por segmento
+observatory.graphic.global.puntuation.compliance.ambit.mark.title             = Situaci\u00F3n de cumplimiento estimada por \u00E1mbito
+observatory.graphic.global.puntuation.compliance.ambit.primary.mark.title     = Situaci\u00F3n de cumplimiento estimada de los sitos web principales por \u00E1mbito
 observatory.graphic.mark.allocation.complex.title                             = Puntuaci\u00F3n media de los sitios web: complejidad {0}
 observatory.graphic.mark.allocation.segment.name                              = DistribucionPuntuacionesS{0}
 observatory.graphic.mark.allocation.segment.title                             = Puntuaci\u00F3n media de los sitios web: segmento {0}
