--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -2641,6 +2641,10 @@ observatory.graphic.evolution.mid.puntuation.title.fixed                      = 
 observatory.graphic.evolution.mid.puntuation.title.general                    = Evoluci\u00F3n de la Puntuaci\u00F3n media del observatorio: en t\u00E9rminos generales
 observatory.graphic.evolution.verification.mid.puntuation                     = Evoluci\u00F3n de la Puntuaci\u00F3n Media por Verificaci\u00F3n. Verificaci\u00F3n {0}
 observatory.graphic.evolution.verification.mid.puntuation.name                = EvolucionPuntuacionMediaVerificacionV{0}
+observatory.graphic.global.puntuation.allocation.ambit.mark.name              = ComparacionAdecuacionAmbito
+observatory.graphic.global.puntuation.allocation.ambit.mark.title             = Nivel de adecuaci\u00F3n estimado por \u00E1mbito
+observatory.graphic.global.puntuation.allocation.ambit.primary.mark.name      = ComparacionAdecuacionAmbitoPrincipales
+observatory.graphic.global.puntuation.allocation.ambit.primary.mark.title     = Nivel de adecuaci\u00F3n estimado de los sitios web principales por \u00E1mbito
 observatory.graphic.global.puntuation.allocation.complexitiviy.strached.name  = ComparacionPuntuacionComplejidad
 observatory.graphic.global.puntuation.allocation.complexitiviy.strached.title = Puntuaci\u00F3n media de los sitios web por complejidad y nivel de adecuaci\u00F3n\n
 observatory.graphic.global.puntuation.allocation.complexity.mark.name         = ComparacionAdecuacionComplejidad
@@ -2649,10 +2653,14 @@ observatory.graphic.global.puntuation.allocation.segment.strached.name        = 
 observatory.graphic.global.puntuation.allocation.segment.strached.title       = Comparaci\u00F3n de Puntuaci\u00F3n por Segmento
 observatory.graphic.global.puntuation.allocation.segments.mark.name           = ComparacionAdecuacionSegmento
 observatory.graphic.global.puntuation.allocation.segments.mark.title          = Comparaci\u00F3n de Adecuaci\u00F3n por Segmento
+observatory.graphic.global.puntuation.compilance.ambit.mark.name              = ComparacionCumplimientoAmbitoPrincipales
+observatory.graphic.global.puntuation.compilance.ambit.primary.mark.name      = ComparacionCumplimientoAmbito
 observatory.graphic.global.puntuation.compilance.complexitiviy.mark.name      = ComparacionCumpliminetoComplejidad
 observatory.graphic.global.puntuation.compilance.complexitiviy.mark.title     = Situaci\u00F3n de cumplimiento estimada por complejidad
 observatory.graphic.global.puntuation.compilance.segments.mark.name           = ComparacionCumpliminetoSegmento
 observatory.graphic.global.puntuation.compilance.segments.mark.title          = Situaci\u00F3n de cumplimiento estimada por segmento
+observatory.graphic.global.puntuation.compliance.ambit.mark.title             = Situaci\u00F3n de cumplimiento estimada por \u00E1mbito
+observatory.graphic.global.puntuation.compliance.ambit.primary.mark.title     = Situaci\u00F3n de cumplimiento estimada de los sitos web principales por \u00E1mbito
 observatory.graphic.mark.allocation.complex.title                             = Puntuaci\u00F3n media de los sitios web: complejidad {0}
 observatory.graphic.mark.allocation.segment.name                              = DistribucionPuntuacionesS{0}
 observatory.graphic.mark.allocation.segment.title                             = Distribuci\u00F3n de Puntuaciones: {0}
