Global report new sections
Update ODS to 35 results


Former-commit-id: 952e9509de45277de88144b76edf081fa2ce6d11

--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -751,6 +751,17 @@ gestion.semillas.observatorio               = Gesti\u00F3n de Semillas del Obser
 gestion.semillas.observatorio.titulo        = Gesti\u00F3n de Semillas del Observatorio
 gestion.terminos                            = Gesti\u00F3n de T\u00E9rminos
 
+global.report.allocation.ambit.primary.table.title  = Nivel de adecuaci\u00F3n estimado (% de sitios web) de los sitios web principales por \u00E1mbito adminsitrativo
+global.report.allocation.ambit.table.title          = Nivel de adecuaci\u00F3n estimado (% de sitios web) por \u00E1mbito adminsitrativo
+global.report.compliance.ambit.primary.table.title  = Situaci\u00F3n de cumplimiento estimada (% de sitios web) de los sitios web principales por \u00E1mbito administrativo
+global.report.compliance.ambit.table.title          = Situaci\u00F3n de cumplimiento estimada (% de sitios web) por \u00E1mbito administrativo
+global.report.compliance.complexitivity.table.title = Situaci\u00F3n de cumplimiento estimada (% de sitios web) por complejidad
+global.report.criteria.table.title                  = N\u00FAmero de portales por criterio: {0}
+global.report.header.ambit                          = \u00C1mbito
+global.report.header.complexitivity                 = Complejidad
+global.report.header.num.sitios.web                 = N\u00FAmero de sitios web
+global.report.header.tags                           = Etiqueta
+
 grafica.sin.datos = No existen datos
 
 horas = horas
@@ -2652,8 +2663,8 @@ observatory.graphic.global.puntuation.allocation.segment.strached.name        = 
 observatory.graphic.global.puntuation.allocation.segment.strached.title       = Puntuaci\u00F3n media de los sitios web por segmento y nivel de adecuaci\u00F3n estimado
 observatory.graphic.global.puntuation.allocation.segments.mark.name           = ComparacionAdecuacionSegmento
 observatory.graphic.global.puntuation.allocation.segments.mark.title          = Nivel de adecuaci\u00F3n estimado por segmento
-observatory.graphic.global.puntuation.compilance.ambit.mark.name              = ComparacionCumplimientoAmbitoPrincipales
-observatory.graphic.global.puntuation.compilance.ambit.primary.mark.name      = ComparacionCumplimientoAmbito
+observatory.graphic.global.puntuation.compilance.ambit.mark.name              = ComparacionCumplimientoAmbito
+observatory.graphic.global.puntuation.compilance.ambit.primary.mark.name      = ComparacionCumplimientoAmbitoPrincipales
 observatory.graphic.global.puntuation.compilance.complexitiviy.mark.name      = ComparacionCumpliminetoComplejidad
 observatory.graphic.global.puntuation.compilance.complexitiviy.mark.title     = Situaci\u00F3n de cumplimiento estimada por complejidad
 observatory.graphic.global.puntuation.compilance.segments.mark.name           = ComparacionCumpliminetoSegmento
