--- a/motor-js/docker-compose.yml
+++ b/motor-js/docker-compose.yml
@@ -3,16 +3,14 @@ version: '2.2'
 services:
     renderer:
       privileged: true
-      build: ./renderer
-      image: oawjs_renderer
+      image: artefactos-ic.scae.redsara.es:6000/oawjs_renderer
       scale: 3
       cpus: 2
       restart: always
       command: node /opt/prerender/server.js
       
     proxy:
-      build: ./proxy      
-      image: oawjs_proxy
+      image: artefactos-ic.scae.redsara.es:6000/oawjs_proxy
       command: node /opt/proxy/index.js
       restart: always
       ports:
@@ -20,8 +18,7 @@ services:
       container_name: oaw_proxy   
 
     nginx:
-      #image: nginx:1.13.8-alpine      
-      image: nginx:1.17.9-alpine      
+      image: artefactos-ic.scae.redsara.es:6000/nginx:1.17.9-alpine      
       volumes:
         - ./nginx/reverse.conf:/etc/nginx/conf.d/default.conf
         - ./nginx/certs/server.crt:/etc/nginx/ssl/server.crt
