Fix cookie invalid value
Fix in directory case sensitive

Update ODS template

Fix prooperties with break line end that not works in js


Former-commit-id: 89e53ed34793b3e09ebbfb0144d6b5afb9b90275

--- a/portal/profiles/docker/propertiesmanager.properties
+++ b/portal/profiles/docker/propertiesmanager.properties
@@ -1,4 +1,4 @@
-properties.files=mail, crawler.core, crawler, pdf, check, intav, language, management, returnPaths, role, certificados, basic.service.default, basic.service
+properties.files=mail, crawler.core, crawler, pdf, check, intav, language, management, returnPaths, role, certificados, basic.service.default, basic.service, check.patterns
 
 key.mail= mail.properties
 file.mail=file:///usr/local/tomcat/webapps/oaw/WEB-INF/classes/mail.properties
@@ -38,4 +38,5 @@ file.basic.service=file:///usr/local/tomcat/webapps/oaw/WEB-INF/classes/basic.se
 
 file.descriptions=file:///usr/local/tomcat/webapps/oaw/WEB-INF/classes/check.descriptions.properties
 
-check.patterns.properties=file:///usr/local/tomcat/webapps/oaw/WEB-INF/classes/check.patterns.properties
+key.check.patterns=check.patterns.properties
+file.check.patterns=file:///usr/local/tomcat/webapps/oaw/WEB-INF/classes/check.patterns.properties
