--- a/deployment/docker/Dockerfile
+++ b/deployment/docker/Dockerfile
@@ -14,13 +14,10 @@ ARG proxy_settings=""
 RUN mvn clean install -P docker -DskipTests $proxy_settings
 
 
-FROM tomcat:7.0-jdk8-openjdk-slim
+FROM bitnami/tomcat:7
 
 COPY --from=MAVEN_TOOL_CHAIN /tmp/portal/target/oaw.war $CATALINA_HOME/webapps/oaw.war
-#COPY deployment/docker/conf-context-oaw.xml $CATALINA_BASE/conf/Catalina/localhost/oaw.xml
-
-RUN mkdir -m777 $CATALINA_HOME/conf/Catalina
-RUN chmod -R 777 /usr/local/tomcat/webapps
+COPY deployment/docker/conf-context-oaw.xml $CATALINA_BASE/conf/Catalina/localhost/oaw.xml
 
 ENV CATALINA_OPTS="-Dorg.apache.tomcat.util.digester.PROPERTY_SOURCE=org.apache.tomcat.util.digester.EnvironmentPropertySource"
 
