--- a/wcagem-tool/wcag-em-report-tool/.dockerignore
+++ b/wcagem-tool/wcag-em-report-tool/.dockerignore
@@ -1,6 +1,8 @@
-./docker/*
-./node_modules/*
-./tmp/*
-./sass-cache/*
+docker/
+node_modules/
+.tmp/
+.sass-cache/
+.git/
+.history/
 Dockerfile
 docker-compose.yml
